# duckdb_bigquery_scanner

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  _extension_distribution.yml
scripts/extension_build/linux/: build_with_image.sh  build_with_image_arm.sh  entrypoint.sh  extension_builder_image.sh  extension_builder_image_arm.sh  linux.Dockerfile
src/: CMakeLists.txt  bigquery_connection.cpp  bigquery_execute.cpp  bigquery_extension.cpp  bigquery_filter_pushdown.cpp  bigquery_query.cpp  bigquery_scanner.cpp  bigquery_storage.cpp  bigquery_utils.cpp
src/include/: bigquery_connection.hpp  bigquery_filter_pushdown.hpp  bigquery_query.hpp  bigquery_result.hpp  bigquery_scanner.hpp  bigquery_storage.hpp  bigquery_utils.hpp  duckdb_bigquery_extension.hpp
src/include/storage/: bigquery_catalog.hpp  bigquery_catalog_set.hpp  bigquery_execute_query.hpp  bigquery_index.hpp  bigquery_index_entry.hpp  bigquery_index_set.hpp  bigquery_insert.hpp  bigquery_optimizer.hpp  bigquery_schema_entry.hpp  bigquery_schema_set.hpp  bigquery_table_entry.hpp  bigquery_table_set.hpp  bigquery_transaction.hpp  bigquery_transaction_manager.hpp
src/storage/: CMakeLists.txt  bigquery_catalog.cpp  bigquery_catalog_set.cpp  bigquery_clear_cache.cpp  bigquery_execute_query.cpp  bigquery_index.cpp  bigquery_index_entry.cpp  bigquery_index_set.cpp  bigquery_insert.cpp  bigquery_optimizer.cpp  bigquery_result.cpp  bigquery_schema_entry.cpp  bigquery_schema_set.cpp  bigquery_table_entry.cpp  bigquery_table_set.cpp  bigquery_transaction.cpp  bigquery_transaction_manager.cpp
test/: CMakeLists.txt
test/cpp/: bigquery_utils_test.cpp
